--- a/src/App.css
+++ b/src/App.css
@@ -1,88 +1,41 @@
-/* Reset de estilos para normalizar el renderizado en diferentes navegadores */
+@font-face{
+  font-family: avalon;
+  src: url(src/assets/fonts/avalon.woff2);
+}
+
 body, h1, h2, h3, p, ul, li {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .header {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .navbar a {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: avalon, Arial, Helvetica, sans-serif ;
+  background-color: #968c8c;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 10px;
+  padding: 20px;
+}
+
+.navbar {
+  padding: 6px;
+  margin: auto;
+  a {
     color: #fff;
     text-decoration: none;
-    margin: 0 10px;
+    font-family: avalon, Arial, Helvetica, sans-serif;
   }
-  
-  .product {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 20px;
-    margin: 10px;
-    text-align: center;
+  .logo_container {
+    margin: 0;
+    width: 30%;
+    max-width: 300px;
+    .logo {
+      width: 90%;
+      max-width: 300px;
+      padding-top: 10px;
+    }
   }
-  
-  .product img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-  }
-  
-  .product h3 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-  }
-  
-  .product button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .product button:hover {
-    background-color: #0056b3;
-  }
-  
-  .cart {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 20px;
-    margin: 10px;
-    text-align: center;
-  }
-  
-  .cart-item {
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-  }
-  
-  .cart-item img {
-    max-width: 50px;
-    height: auto;
-    margin-right: 10px;
-  }
-  
+}
+
